--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,3 +18,10 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: html-content
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: html-content
+        configMap:
+          name: argocd-demo-app-html
